--- a/travel-buddy/src/styles/DestinationBox.css
+++ b/travel-buddy/src/styles/DestinationBox.css
@@ -99,3 +99,11 @@ button:active {
     height: 32px;
     margin-right: 16px;
 }
+
+.pin-readmore-container {
+    display: flex;
+    align-items: center; 
+}
+
+.pin-container {
+    margin-right: 10px; 
